opam-version: "2.0"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: ["Zach Shipko <zachshipko@gmail.com>"]
license: "ISC"
homepage: "https://github.com/zshipko/irmin-query"
doc: "https://zshipko.github.io/irmin-query/doc"
dev-repo: "git://github.com:zshipko/irmin-query"
bug-reports: "https://github.com/zshipko/irmin-query/issues"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]

depends:
[
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "irmin" {>= "2.0.0"}
  "alcotest-lwt" {with-test}
]

synopsis: "Iterate over Irmin stores"
